<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@android:color/background_dark"
    tools:context=".signUp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/oobscure" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btSaveData"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="140dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="createNewUser"
            android:text="@string/up"
            android:textSize="18sp"
            app:shapeAppearanceOverlay="@style/roundedbutton" />

        <TextView
            android:id="@+id/tvBackToIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="goToSignIn"
            android:text="@string/already"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="17dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/outline_person_add_white_36"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/etEmail2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/outline_email_white_36"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/outline_lock_open_white_36"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/etBirth"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/outline_cake_white_36"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>